# Library

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  populate_data.py  pyproject.toml
src/: .env.template  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_09_22_1242-46b6832f89e6_database_creation.py  2024_09_23_2259-b023da8eecb4_order_change_timestamp.py  2024_12_13_1604-2ccd235465c9_database_creation.py  2024_12_14_2206-1afea678c3e0_database_creation.py  2024_12_16_2044-192c6c4892f0_add_unique_constraint_to_authors.py  2024_12_18_1629-1fdf90e4360a_database_creation.py
src/author/: crud.py  schemas.py  services.py  views.py
src/book/: __init__.py  crud.py  schemas.py  services.py  views.py
src/borrow/: crud.py  schemas.py  services.py  views.py
src/core/: config.py
src/core/models/: author.py  base.py  book.py  borrow.py  db_helper.py  order.py  order_item.py  product.py
src/crud/: order.py  product.py
src/models/: __init__.py  author.py  base.py  book.py  borrow.py  db_helper.py  order.py  order_item.py  product.py
src/schemas/: order.py  product.py
src/services/: order.py  product.py
src/utils/: __init__.py  exceptions.py
src/views/: __init__.py  orders.py  products.py
start/: .env.example  docker-compose.yml
tests/: conftest.py  test_author_views.py  test_book_views.py  test_data.py  test_order_views.py
