[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
